--- a/index.css
+++ b/index.css
@@ -708,6 +708,9 @@
   .mt-30 {
     margin-top: calc(var(--spacing) * 30);
   }
+  .mt-32 {
+    margin-top: calc(var(--spacing) * 32);
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -819,6 +822,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -2267,6 +2273,16 @@
   .md\:mt-28 {
     @media (width >= 375px) {
       margin-top: calc(var(--spacing) * 28);
+    }
+  }
+  .md\:mt-32 {
+    @media (width >= 375px) {
+      margin-top: calc(var(--spacing) * 32);
+    }
+  }
+  .md\:mt-36 {
+    @media (width >= 375px) {
+      margin-top: calc(var(--spacing) * 36);
     }
   }
   .md\:min-h-52 {
